--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <h1 align="center"><p><img src="esp-logo.e558125a.png" width="42" height="42" style="vertical-align: middle" crossorigin=""> ESP Tool</p></h1>
-        <h4 align="center">A Serial Flasher utility for Espressif chips</h4>
-        <div id="safariErr" style="display: none"><p align="center" style="color: red">This tool is not supported on Safari browser!</p>
-        </div>
-        <div align="center">
-            <a class="btn btn-info" href="./docs/index.html">View the API Documentation</a>
-
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="debugLogging" value="">
-                <label class="form-check-label" for="debugLogging">Show Debug log</label>
+        <div style="display: none;">
+            <h1 align="center"><p><img src="esp-logo.e558125a.png" width="42" height="42" style="vertical-align: middle" crossorigin=""> ESP Tool</p></h1>
+            <h4 align="center">A Serial Flasher utility for Espressif chips</h4>
+            <div id="safariErr" style="display: none"><p align="center" style="color: red">This tool is not supported on Safari browser!</p>
             </div>
-          </div>
+            <div align="center">
+                <a class="btn btn-info" href="./docs/index.html">View the API Documentation</a>
+
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="debugLogging" value="">
+                    <label class="form-check-label" for="debugLogging">Show Debug log</label>
+                </div>
+            </div>
+        </div>
         <div class="container" id="main">
             <hr>
             <div id="program">
@@ -41,7 +43,7 @@
                 <input class="btn btn-info btn-sm" type="button" id="connectButton" value="Connect">
                 <input class="btn btn-info btn-sm" type="button" id="copyTraceButton" value="Copy Trace">
                 <input class="btn btn-warning btn-sm" type="button" id="disconnectButton" value="Disconnect">
-                <input class="btn btn-danger btn-sm" type="button" id="eraseButton" value="Erase Flash">
+                <input class="btn btn-danger btn-sm" type="button" id="eraseButton" value="Erase Flash" style="display: none;">
                 <br>
 
                 <!-- Firmware URL input -->
