--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html><html><head><script type="importmap">{"imports":{"17fYX":"./stub_flasher_32.79928096.js","2pBtn":"./esp32s2.eb67e676.js","35K3k":"./stub_flasher_32c2.1e8a8f62.js","3OCVy":"./stub_flasher_32c61.7504b2fe.js","3qJU9":"./esp32c61.25d185bb.js","8itJW":"./esp32c6.9206e4d8.js","9N6hS":"./stub_flasher_32s2.d20e7f63.js","ELGPK":"./esp32c3.30f63481.js","at51o":"./esp32s3.67489660.js","cJDqv":"./stub_flasher_32c6.23eadd95.js","cXe3K":"./esp8266.ff379730.js","d4LkX":"./stub_flasher_32c5.b521988f.js","dJVWW":"./esp32h2.5b3f9c3f.js","eXP7h":"./stub_flasher_32h2.b5dc5012.js","fa8eB":"./stub_flasher_32p4.89455c1f.js","fk33s":"./esp32c5.1948091b.js","gbY4J":"./esp32.8ba027e5.js","gmXBg":"./stub_flasher_32s3.9db7ea72.js","hHpLC":"./stub_flasher_8266.1e9be1d2.js","i7djm":"./esp32p4.c3b47fed.js","jJvTY":"./esp32c2.f983e934.js","vZCF2":"./stub_flasher_32c3.90a30a3b.js"}}</script>
         <meta charset="utf-8">
         <title>ESP Tool</title>
+        <style>
+            .spinner {
+              border: 4px solid rgba(0, 0, 0, 0.1);
+              width: 30px;
+              height: 30px;
+              border-radius: 50%;
+              border-left-color: #337ab7; /* Bootstrap primary color */
+              animation: spin 1s linear infinite;
+              display: inline-block;
+            }
+
+            @keyframes spin {
+              0% { transform: rotate(0deg); }
+              100% { transform: rotate(360deg); }
+            }
+        </style>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.19.0/css/xterm.css">
         <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
@@ -29,9 +45,9 @@
             <hr>
             <div id="program">
                 <h3> Program </h3>
-                <label for="baudrates" id="lblBaudrate">Baudrate:</label>
+                <label for="baudrates" id="lblBaudrate" style="display: none;">Baudrate:</label>
                 <label style="display: none" id="lblConnTo">Connected to device: </label>
-                <select name="baudrates" id="baudrates">
+                <select name="baudrates" id="baudrates" style="display: none;">
                     <option value="921600">921600</option>
                     <option value="460800">460800</option>
                     <option value="230400">230400</option>
@@ -41,13 +57,13 @@
                 <br><br>
 
                 <input class="btn btn-info btn-sm" type="button" id="connectButton" value="Connect">
-                <input class="btn btn-info btn-sm" type="button" id="copyTraceButton" value="Copy Trace">
-                <input class="btn btn-warning btn-sm" type="button" id="disconnectButton" value="Disconnect">
+                <input class="btn btn-info btn-sm" type="button" id="copyTraceButton" value="Copy Trace" style="display: none;">
+                <input class="btn btn-warning btn-sm" type="button" id="disconnectButton" value="Disconnect" style="display: none;">
                 <input class="btn btn-danger btn-sm" type="button" id="eraseButton" value="Erase Flash" style="display: none;">
                 <br>
 
                 <!-- Firmware URL input -->
-                <div style="margin-top: 10px;">
+                <div style="margin-top: 10px;" id="firmwareUrlSection">
                     <label for="firmwareUrlInput">Firmware URL (e.g., from GitHub):</label>
                     <input type="text" class="form-control" id="firmwareUrlInput" placeholder="https://example.com/firmware.bin">
                     <button class="btn btn-primary btn-sm" id="fetchUrlButton" style="margin-top: 5px;">Fetch and Add Firmware</button>
@@ -60,7 +76,7 @@
                 </div>
 
                 <div id="files">
-                    <table class="table table-striped" id="fileTable">
+                    <table class="table table-striped" id="fileTable" style="display: none;">
                         <thead class="thead-light">
                             <tr>
                                 <th style="display: none;">Flash Address</th>
@@ -71,12 +87,17 @@
                         <tbody id="tableBody">
                         </tbody>
                     </table>
-                    <input class="btn btn-info btn-sm" type="button" id="addFile" value="Add File">
+                    <input class="btn btn-info btn-sm" type="button" id="addFile" value="Add File" style="display: none;">
                     <input class="btn btn-info btn-sm" type="button" id="programButton" value="Program">
                 </div>
                 <output id="list"></output>
-                <hr>
-            </div>
+
+                <!-- Spinner Start -->
+                <div id="spinnerContainer" style="display: none; margin-top: 15px; margin-bottom: 15px; display: flex; align-items: center; justify-content: center;">
+                    <div class="spinner"></div>
+                    <label id="lblStatus" style="margin-left: 10px; font-weight: bold;"></label>
+                </div>
+                <!-- Spinner End -->         </div>
             <div id="console">
                 <h3>Console </h3>
                 <label style="display: none" id="lblConsoleFor">Connected to device: </label>
