--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Firmware URL Configuration</title>
+    <link rel="icon" href="https://bgeigiezen.safecast.jp/favicon.ico" type="image/x-icon">
     <!-- Optional: Link to Bootstrap CSS if you want styling consistent with index.html -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
