--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html><head><script type="importmap">{"imports":{"17fYX":"./stub_flasher_32.79928096.js","2pBtn":"./esp32s2.eb67e676.js","35K3k":"./stub_flasher_32c2.1e8a8f62.js","3OCVy":"./stub_flasher_32c61.7504b2fe.js","3qJU9":"./esp32c61.25d185bb.js","8itJW":"./esp32c6.9206e4d8.js","9N6hS":"./stub_flasher_32s2.d20e7f63.js","ELGPK":"./esp32c3.30f63481.js","at51o":"./esp32s3.67489660.js","cJDqv":"./stub_flasher_32c6.23eadd95.js","cXe3K":"./esp8266.ff379730.js","d4LkX":"./stub_flasher_32c5.b521988f.js","dJVWW":"./esp32h2.5b3f9c3f.js","eXP7h":"./stub_flasher_32h2.b5dc5012.js","fa8eB":"./stub_flasher_32p4.89455c1f.js","fk33s":"./esp32c5.1948091b.js","gbY4J":"./esp32.8ba027e5.js","gmXBg":"./stub_flasher_32s3.9db7ea72.js","hHpLC":"./stub_flasher_8266.1e9be1d2.js","i7djm":"./esp32p4.c3b47fed.js","jJvTY":"./esp32c2.f983e934.js","vZCF2":"./stub_flasher_32c3.90a30a3b.js"}}</script>
         <meta charset="utf-8">
-        <title>ESP Tool</title>
+        <title>bGeigieZen Programmer</title>
+        <link rel="icon" href="https://bgeigiezen.safecast.jp/favicon.ico" type="image/x-icon">
         <style>
             .spinner {
               border: 4px solid rgba(0, 0, 0, 0.1);
